<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="monster_truck_control.mtc.MainActivity">

    <Button
        android:layout_width="@dimen/icon_dimension"
        android:layout_height="@dimen/icon_dimension"
        android:text="@string/stop_engine"
        android:textColor="@color/white"
        android:id="@+id/stopEngine"
        android:background="@drawable/stop_engine"
        android:onClick="stopEngineClick"
        android:clickable="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:checkedButton="@+id/drive"
        android:id="@+id/prndl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/drive"
            android:background="@drawable/prndl"
            android:layout_width="@dimen/move_btn_dimension"
            android:layout_height="@dimen/move_btn_dimension"
            android:button="@null"
            android:text="@string/move_forw"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rear"
            android:layout_width="@dimen/move_btn_dimension"
            android:layout_height="@dimen/move_btn_dimension"
            android:background="@drawable/prndl"
            android:button="@null"
            android:text="@string/move_back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/wifiIcon"
            android:layout_gravity="top|center_vertical|end"
            android:drawableStart="@drawable/ic_wifi_red"
            android:textColor="@color/white"
            android:text=""
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/batteryIcon"
            android:layout_gravity="center_vertical|bottom|end"
            android:drawableEnd="@drawable/ic_battery_red_charge"
            android:gravity="bottom"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/navi_height"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/speed"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="@dimen/speed_w"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <!-- Width and height of the seekbar are before rotation -->
            <!-- The rotation is CLOCKWISE -->
            <SeekBar
                android:id="@+id/speed"
                android:layout_width="@dimen/speed_h"
                android:layout_height="@dimen/speed_w"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:max="100"
                android:progress="10"
                android:progressDrawable="@drawable/progress_bar"
                android:rotation="270"
                android:thumb="@drawable/thumb" />
        </FrameLayout>

    </LinearLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_light_color"
        android:background="@drawable/light"
        android:id="@+id/lightBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:textOff="@string/light_off"
        android:textOn="@string/light_on"
        android:onClick="lightBtnClick" />

</RelativeLayout>
